--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+       <link rel="icon" type="image/png" href="assets\img\favicon (1)\favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="assets\img\favicon (1)\favicon.svg" />
+<link rel="shortcut icon" href="assets\img\favicon (1)\favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="assets\img\favicon (1)\apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="Fab.io" />
+<link rel="manifest" href="assets\img\favicon (1)\site.webmanifest" />
+
   </head>
   <body>
     <div id="clock">
